--- a/typeface/typeface-homepage/css/style.css
+++ b/typeface/typeface-homepage/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'IBM Plex Mono', monospace;
-  background-color: #FFFCF1;
+  background-color: white;
   cursor: none;
   height: 100vh;
 }
