--- a/style/specimen.css
+++ b/style/specimen.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
-  background-color: #FFFCF1;
+  background-color: aliceblue;
   cursor: none;
   height: 100vh;
 }
@@ -11,12 +11,13 @@ body {
 
 
 a{
-  color: #1A60FB;
+  color: mediumseagreen;
   font-family: 'IBM Plex Mono', monospace;
   font-size: 1rem;
   cursor: none;
   margin-left: 5vw;
   text-decoration: none;
+  letter-spacing: 0px;
 }
 
 a:hover{
@@ -25,7 +26,6 @@ text-decoration: underline;
 
 
 #info{
-  
   margin-top: -2vh;
   margin-left: 88vw;
   position: absolute;
@@ -40,7 +40,7 @@ text-decoration: underline;
 }
 
 p{
-  color: #1A60FB;
+  color: mediumseagreen;
   font-family: 'IBM Plex Mono', monospace;
   font-size: 1rem;
 }
@@ -58,11 +58,11 @@ p{
 
 .line{
   position: absolute;
-  border-left: 3px solid #1A60FB;
+  border-left: 3px solid mediumseagreen;
   border-radius: 100px;
 }
 .trapezoid-top{
-  border-top: 20px solid #1A60FB;
+  border-top: 20px solid mediumseagreen;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
   height: 0;
@@ -71,7 +71,7 @@ p{
 }
 .trapezoid-bottom{
   position: absolute;
-  border-bottom: 20px solid #1A60FB;
+  border-bottom: 20px solid mediumseagreen;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
   height: 0;
@@ -79,7 +79,7 @@ p{
 }
 .horizontal{
   position: absolute;
-  border-top: 3px solid #1A60FB;
+  border-top: 3px solid mediumseagreen;
   border-radius: 100px;
 }
 
@@ -90,7 +90,7 @@ p{
   pointer-events: none;
   width: 25px;
   height:25px;
-  background-color: #ddca5f;
+  background-color: tomato;
   border-radius: 100%;
   position: absolute;
   top:0;
@@ -230,7 +230,7 @@ p{
 
 .h-trapezoid-2{
   position: absolute;
-  border-bottom: 20px solid #1A60FB;
+  border-bottom: 20px solid mediumseagreen;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
   height: 0;
@@ -241,7 +241,7 @@ p{
 
 .h-trapezoid-3{
   position: absolute;
-  border-bottom: 20px solid #1A60FB;
+  border-bottom: 20px solid mediumseagreen;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
   height: 0;
@@ -295,7 +295,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 
@@ -306,7 +306,7 @@ p{
   position: absolute;
   width: 60px;
   height: 25px;
-  background-color:#1A60FB;
+  background-color:mediumseagreen;
   top: 292px;
   left: 158px;
   transform: scale(0);
@@ -320,7 +320,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color:mediumseagreen;
 }
 
 .a-circle-2{
@@ -331,7 +331,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .a-circle-3{
@@ -342,7 +342,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color:mediumseagreen;
 }
 
 .a-trapezoid-bottom-left{
@@ -390,7 +390,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color:mediumseagreen;
 }
 
 .m-rectangle-left{
@@ -400,7 +400,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color:mediumseagreen;
 }
 .m-rectangle-right{
   position: absolute;
@@ -409,7 +409,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color:mediumseagreen;
 }
 
 .m-angle-right{
@@ -474,7 +474,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
 }
 
 .b-circle-2{
@@ -485,7 +485,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
 }
 
 .b-rectangle{
@@ -495,7 +495,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .b-vertical-left{
@@ -554,7 +554,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
 }
 
 .u-rectangle-left{
@@ -564,7 +564,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
 }
 
 .u-rectangle-right{
@@ -574,7 +574,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
 }
 
 .u-vertical-left{
@@ -676,7 +676,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
 }
 
 .r-circle-left-top{
@@ -687,7 +687,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .r-circle-right-bottom{
@@ -698,7 +698,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 
@@ -712,7 +712,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
 }
 
 .g-vertical-left{
@@ -774,7 +774,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
 }
 
 /* Letter – E */
@@ -786,7 +786,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
 }
 
 .e-circle-1{
@@ -797,7 +797,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .e-circle-2{
@@ -808,7 +808,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .e-vertical-left{
@@ -873,7 +873,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .f-rectangle{
@@ -883,7 +883,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .f-vertical-left{
@@ -937,7 +937,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .o-circle-1{
@@ -948,7 +948,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .o-circle-2{
@@ -959,7 +959,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .o-rectangle{
@@ -969,7 +969,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .o-vertical-left{
@@ -1026,7 +1026,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .n-circle{
@@ -1037,7 +1037,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .n-vertical-left{
@@ -1087,7 +1087,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .s-circle-right-bottom-2{
@@ -1098,7 +1098,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .s-vertical-top-right{
@@ -1166,7 +1166,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .c-circle-2{
   position: absolute;
@@ -1176,7 +1176,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .c-circle-3{
   position: absolute;
@@ -1186,7 +1186,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .c-circle-4{
   position: absolute;
@@ -1196,7 +1196,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .c-trapezoid-top-left-2{
@@ -1256,7 +1256,7 @@ p{
   position: absolute;
   width: 60px;
   height: 25px;
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
   transform: scale(0);
 }
 
@@ -1268,7 +1268,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .d-vertical-left{
@@ -1330,7 +1330,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .i-circle-1{
   position: absolute;
@@ -1340,7 +1340,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .i-circle-2{
   position: absolute;
@@ -1350,7 +1350,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .i-circle-3{
   position: absolute;
@@ -1360,7 +1360,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .i-circle-4{
   position: absolute;
@@ -1370,7 +1370,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .i-circle-5{
   position: absolute;
@@ -1380,7 +1380,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .i-circle-6{
   position: absolute;
@@ -1390,7 +1390,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .i-circle-7{
   position: absolute;
@@ -1400,7 +1400,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
 }
 
 .i-vertical-left{
@@ -1430,7 +1430,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .j-rectangle{
@@ -1440,7 +1440,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .j-vertical-left{  
@@ -1487,7 +1487,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 
@@ -1499,7 +1499,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .k-trapezoid-bottom-left{
@@ -1552,7 +1552,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .l-circle-left{
@@ -1563,7 +1563,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .l-vertical-left{
@@ -1607,7 +1607,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 
@@ -1620,7 +1620,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .p-circle{
@@ -1631,7 +1631,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .p-vertical-left{
@@ -1680,7 +1680,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .t-circle-1{
   position: absolute;
@@ -1690,7 +1690,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .t-circle-2{
   position: absolute;
@@ -1700,7 +1700,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .t-circle-3{
   position: absolute;
@@ -1710,7 +1710,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .t-circle-4{
   position: absolute;
@@ -1720,7 +1720,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 .t-circle-5{
   position: absolute;
@@ -1730,7 +1730,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .t-vertical-left{
@@ -1876,7 +1876,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .v-circle{
@@ -1887,7 +1887,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .v-angle-left{
@@ -1929,7 +1929,7 @@ p{
   position: absolute;
   width: 60px;
   height: 25px;
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
   transform: scale(0);
 }
 
@@ -1939,7 +1939,7 @@ p{
   position: absolute;
   width: 60px;
   height: 25px;
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
   transform: scale(0);
 }
 
@@ -1949,7 +1949,7 @@ p{
   position: absolute;
   width: 60px;
   height: 25px;
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
   transform: scale(0);
 }
 
@@ -2017,7 +2017,7 @@ p{
   position: absolute;
   width: 60px;
   height: 25px;
-  background-color: #1A60FB;
+  background-color: mediumseagreen;
   transform: scale(0);
 }
 
@@ -2109,7 +2109,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .y-circle-2{
@@ -2120,7 +2120,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .y-circle-3{
@@ -2131,7 +2131,7 @@ p{
   height: 45px;
   border-radius: 100%;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 
@@ -2184,7 +2184,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 .z-rectangle-2{
@@ -2194,7 +2194,7 @@ p{
   width: 60px;
   height: 25px;
   transform: scale(0);
-  background-color:#1A60FB;
+  background-color: mediumseagreen;
 }
 
 
